# first_use_case

./: .env  README.md  pyproject.toml
db/: chroma.sqlite3
output/: report.md
output_email/: report.md
src/first_use_case/: crew.py  main.py
src/first_use_case/config/: agents.yaml  tasks.yaml
