[project]
name = "first_use_case"
version = "0.1.0"
description = "first_use_case using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
first_use_case = "first_use_case.main:run"
run_crew = "first_use_case.main:run"
train = "first_use_case.main:train"
replay = "first_use_case.main:replay"
test = "first_use_case.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
